--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
