--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-const BASE_URL = "http://127.0.0.1:8000/api/";
+VUE_APP_API_URL=http://127.0.0.1:8000/api
+
+# VUE_APP_FIREBASE_PROJECT_ID = "vue-app-"
+# VUE_APP_FIREBASE_API_KEY = "AIzaSysB-tjU39RHlLIhF4969n_RjqQu_qja2W2Y"
