--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_API_URL=http://127.0.0.1:8000/api
+VITE_API_URL=http://127.0.0.1:8000/api
 
-# VUE_APP_FIREBASE_PROJECT_ID = "vue-app-"
-# VUE_APP_FIREBASE_API_KEY = "AIzaSysB-tjU39RHlLIhF4969n_RjqQu_qja2W2Y"
+# VUE_APP_FIREBASE_PROJECT_ID = "vue-app"
+# VUE_APP_FIREBASE_API_KEY = "http://127.0.0.1:8000/api"
