--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
 VITE_API_URL=http://127.0.0.1:8000/api
-
-# VUE_APP_FIREBASE_PROJECT_ID = "vue-app"
-# VUE_APP_FIREBASE_API_KEY = "http://127.0.0.1:8000/api"
+VITE_API_URL=http://127.0.0.1:8000/api
